Use entity_id consistently everywhere

--- a/morphology.ipynb
+++ b/morphology.ipynb
@@ -358,7 +358,7 @@
     }
    ],
    "source": [
-    "fetched = client.get(resource_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
+    "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
     "rprint(fetched)"
    ]
   },
