--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# No GET endpoint yet for species\n",
+    "# No GET endpoint yet for brain-region\n",
     "\n",
     "brain_location = BrainLocation(\n",
     "    x=4101.52490234375,\n",
