Add missing types

--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -777,7 +777,9 @@
    "source": [
     "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
     "rprint(fetched)\n",
-    "fetched_wout_assets = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token, with_assets=False)\n",
+    "fetched_wout_assets = client.get(\n",
+    "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token, with_assets=False\n",
+    ")\n",
     "rprint(fetched_wout_assets)"
    ]
   },
