--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -7,23 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
     "import os\n",
-    "import tempfile\n",
-    "from pathlib import Path\n",
     "\n",
     "from rich import print as rprint\n",
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
+    "from entitysdk.models.contribution import Organization, Person, Role\n",
     "from entitysdk.models.morphology import (\n",
-    "    BrainLocation,\n",
-    "    BrainRegion,\n",
-    "    ReconstructionMorphology,\n",
     "    Species,\n",
     "    Strain,\n",
     ")\n",
-    "from entitysdk.models.contribution import Role, Person, Organization\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
