--- a/examples/contribution.ipynb
+++ b/examples/contribution.ipynb
@@ -7,18 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
     "import os\n",
-    "import tempfile\n",
-    "from pathlib import Path\n",
     "\n",
     "from rich import print as rprint\n",
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.agent import Organization, Person\n",
+    "from entitysdk.models.agent import Organization\n",
     "from entitysdk.models.contribution import Contribution, Role\n",
-    "from entitysdk.models.entity import Entity\n",
     "from entitysdk.models.morphology import ReconstructionMorphology\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
