--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -17,7 +17,9 @@
     "from entitysdk.models.morphology import (\n",
     "    Species,\n",
     "    Strain,\n",
+    "    ReconstructionMorphology,\n",
     ")\n",
+    "from entitysdk.models.mtype import MTypeClass\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
@@ -124,12 +126,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d618e18d-dffc-4540-8aca-f2ca9e27a4c9",
+   "metadata": {},
+   "source": [
+    "## List all mtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5db5ae6-4d00-4a9e-8d4b-bc4956e5e0c0",
+   "id": "9ca37909-9431-42dc-b373-292206d7e66b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mtype_it = client.search(entity_type=MTypeClass, token=token)\n",
+    "rprint(list(mtype_it))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbb7263f-11da-4ab1-b7a9-61dde72645f9",
+   "metadata": {},
+   "source": [
+    "## List morphologies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c139fe93-6f0f-4d82-b73f-cd0dc5d72aff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morph_it = client.search(entity_type=ReconstructionMorphology, token=token, limit=10)\n",
+    "rprint(list(morph_it))"
+   ]
   }
  ],
  "metadata": {
