Add mtype id search example

--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -149,7 +149,7 @@
    "id": "cbb7263f-11da-4ab1-b7a9-61dde72645f9",
    "metadata": {},
    "source": [
-    "## List morphologies"
+    "## List N morphologies"
    ]
   },
   {
@@ -160,7 +160,26 @@
    "outputs": [],
    "source": [
     "morph_it = client.search(entity_type=ReconstructionMorphology, token=token, limit=10)\n",
-    "rprint(list(morph_it))"
+    "rprint(list(morph_it))e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae8506b-9cbc-433b-a17d-6ce3d84bcf4c",
+   "metadata": {},
+   "source": [
+    "## Find morphologies of a specifix mtype id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb1e69c-6117-4104-ba4e-21b43d3aa351",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = client.search(entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token)\n",
+    "rprint(list(it))"
    ]
   }
  ],
