--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -15,9 +15,9 @@
     "from entitysdk.common import ProjectContext\n",
     "from entitysdk.models.contribution import Organization, Person, Role\n",
     "from entitysdk.models.morphology import (\n",
+    "    ReconstructionMorphology,\n",
     "    Species,\n",
     "    Strain,\n",
-    "    ReconstructionMorphology,\n",
     ")\n",
     "from entitysdk.models.mtype import MTypeClass\n",
     "\n",
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "morph_it = client.search(entity_type=ReconstructionMorphology, token=token, limit=10)\n",
-    "rprint(list(morph_it))e"
+    "rprint(list(morph_it))"
    ]
   },
   {
