Fix downloading and add example

--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -191,6 +191,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b00725dc-ba90-4ddf-b3ba-dea612cd7720",
+   "metadata": {},
+   "source": [
+    "## Download asset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c89e91f7-a9bb-4d09-b921-4659e338225c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for asset in fetched.assets:\n",
+    "    if asset.content_type == \"application/swc\":\n",
+    "        client.download_file(\n",
+    "            entity_id=fetched.id,\n",
+    "            entity_type=type(fetched),\n",
+    "            asset_id=asset.id,\n",
+    "            output_path=\"./my-file.h5\",\n",
+    "            token=token,\n",
+    "        )\n",
+    "        content = client.download_content(\n",
+    "            entity_id=fetched.id, entity_type=type(fetched), asset_id=asset.id, token=token\n",
+    "        )\n",
+    "        break\n",
+    "\n",
+    "print(content)\n",
+    "print(Path(\"my-file.h5\").read_text())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f15c808c-c454-4277-9ec4-587922ac74f3",
    "metadata": {},
    "source": [
