--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -180,7 +180,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# with assets included (default)\n",
     "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
     "rprint(fetched)\n",
@@ -207,7 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for asset in fetched.assets:\n",
     "    if asset.content_type == \"application/swc\":\n",
     "        client.download_file(\n",
@@ -312,7 +310,7 @@
     "            entity_id=fetched.id, entity_type=type(fetched), asset_id=asset.id, token=token\n",
     "        )\n",
     "        break\n",
-    "print(content)\n"
+    "print(content)"
    ]
   },
   {
