Make iterator results more user friendly

--- a/examples/contribution.ipynb
+++ b/examples/contribution.ipynb
@@ -41,14 +41,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = list(client.search(entity_type=Organization, token=token, limit=1))[0]\n",
-    "rprint(agent)\n",
+    "agent = client.search(entity_type=Organization, token=token, limit=1).one()\n",
     "\n",
-    "role = list(client.search(entity_type=Role, token=token, limit=1))[0]\n",
-    "rprint(role)\n",
+    "role = client.search(entity_type=Role, token=token, limit=1).one()\n",
     "\n",
     "\n",
-    "morphology = list(client.search(entity_type=ReconstructionMorphology, token=token, limit=2))[1]\n",
+    "morphology = client.search(entity_type=ReconstructionMorphology, token=token, limit=1).first()\n",
     "rprint(morphology)\n",
     "\n",
     "contribution = Contribution(\n",
