--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -64,12 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = list(\n",
-    "    client.search(entity_type=Species, query={\"name\": \"Mus musculus\"}, token=token, limit=10)\n",
-    ")[0]\n",
+    "species = client.search(entity_type=Species, query={\"name\": \"Mus musculus\"}, token=token, limit=10).one()\n",
     "rprint(species)\n",
     "\n",
-    "strain = list(client.search(entity_type=Strain, query={\"name\": \"Cux2-CreERT2\"}, token=token))[0]\n",
+    "strain = client.search(entity_type=Strain, query={\"name\": \"Cux2-CreERT2\"}, token=token).one()\n",
     "rprint(strain)"
    ]
   },
@@ -135,11 +133,9 @@
     "with tempfile.TemporaryDirectory() as tdir:\n",
     "    file1 = Path(tdir, \"morph.h5\")\n",
     "    file1.write_text(\"h5\")\n",
-    "    file1.touch()\n",
     "\n",
     "    file2 = Path(tdir, \"morph.swc\")\n",
     "    file2.write_text(\"swc\")\n",
-    "    file2.touch()\n",
     "\n",
     "    # use a filepath to register first asset\n",
     "    asset1 = client.upload_file(\n",
@@ -328,13 +324,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "it = client.search(\n",
+    "hits = client.search(\n",
     "    entity_type=ReconstructionMorphology,\n",
     "    query={\"name__ilike\": \"my-morph\", \"page\": 1, \"page_size\": 2},\n",
     "    token=token,\n",
     "    limit=0,\n",
-    ")\n",
-    "hits = list(it)\n",
+    ").all()\n",
     "\n",
     "print(len(hits))\n",
     "rprint(hits[0])"
