--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species_iterator = client.search(entity_type=Species, token=token)\n",
-    "rprint(list(species_iterator))"
+    "all_species = client.search(entity_type=Species, token=token).all()\n",
+    "rprint(all_species)"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species_iterator = client.search(entity_type=Strain, token=token)\n",
-    "rprint(list(species_iterator))"
+    "all_strains = client.search(entity_type=Strain, token=token).all()\n",
+    "rprint(all_strains)"
    ]
   },
   {
@@ -83,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "role_iterator = client.search(entity_type=Role, token=token)\n",
-    "rprint(list(role_iterator))"
+    "all_roles = client.search(entity_type=Role, token=token).all()\n",
+    "rprint(all_roles)"
    ]
   },
   {
@@ -102,8 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_it = client.search(entity_type=Person, token=token)\n",
-    "rprint(list(user_it))"
+    "all_users = client.search(entity_type=Person, token=token).all()\n",
+    "rprint(all_users)"
    ]
   },
   {
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "org_it = client.search(entity_type=Organization, token=token)\n",
-    "rprint(list(org_it))"
+    "all_orgs = client.search(entity_type=Organization, token=token).all()\n",
+    "rprint(all_orgs)"
    ]
   },
   {
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtype_it = client.search(entity_type=MTypeClass, token=token)\n",
-    "rprint(list(mtype_it))"
+    "all_mtypes = client.search(entity_type=MTypeClass, token=token).all()\n",
+    "rprint(all_mtypes)"
    ]
   },
   {
@@ -159,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morph_it = client.search(entity_type=ReconstructionMorphology, token=token, limit=10)\n",
-    "rprint(list(morph_it))"
+    "morphs = client.search(entity_type=ReconstructionMorphology, token=token, limit=10).all()\n",
+    "rprint(morphs"
    ]
   },
   {
@@ -178,8 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "it = client.search(entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token)\n",
-    "rprint(list(it))"
+    "morphs = client.search(entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token).all()\n",
+    "rprint(morphs)"
    ]
   }
  ],
