--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -64,7 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = client.search(entity_type=Species, query={\"name\": \"Mus musculus\"}, token=token, limit=10).one()\n",
+    "species = client.search(\n",
+    "    entity_type=Species, query={\"name\": \"Mus musculus\"}, token=token, limit=10\n",
+    ").one()\n",
     "rprint(species)\n",
     "\n",
     "strain = client.search(entity_type=Strain, query={\"name\": \"Cux2-CreERT2\"}, token=token).one()\n",
