Fix missing parens

--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "morphs = client.search(entity_type=ReconstructionMorphology, token=token, limit=10).all()\n",
-    "rprint(morphs"
+    "rprint(morphs)"
    ]
   },
   {
@@ -178,7 +178,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphs = client.search(entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token).all()\n",
+    "morphs = client.search(\n",
+    "    entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token\n",
+    ").all()\n",
     "rprint(morphs)"
    ]
   }
