--- a/examples/contribution.ipynb
+++ b/examples/contribution.ipynb
@@ -37,23 +37,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd9e9356-0570-41f0-adc3-7ca859d1437b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = client.search_entity(entity_type=Organization, token=token, limit=1).one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef91588-bc83-493e-b90c-2298f814f15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0458e9bc-481b-4129-a206-60c546307411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role = client.search_entity(entity_type=Role, token=token, limit=1).one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d493ec1-044f-46a0-8310-5e6f00347836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(role)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa2c555c-22d5-41aa-8bf3-86fd87921dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphology = client.search_entity(entity_type=ReconstructionMorphology, token=token, limit=1).first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efcfdee2-7679-4ae9-90d6-7e70637459ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(morphology)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3daa96f-4acc-46ef-83b4-375d42ab611c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = client.search(entity_type=Organization, token=token, limit=1).one()\n",
-    "\n",
-    "role = client.search(entity_type=Role, token=token, limit=1).one()\n",
-    "\n",
-    "\n",
-    "morphology = client.search(entity_type=ReconstructionMorphology, token=token, limit=1).first()\n",
-    "rprint(morphology)\n",
-    "\n",
     "contribution = Contribution(\n",
     "    agent=agent,\n",
     "    role=role,\n",
     "    entity=morphology,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "653628d2-5ad9-44fb-be9c-8c7488d664ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(contribution)"
    ]
   },
   {
@@ -71,8 +133,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered = client.register(entity=contribution, token=token)\n",
-    "print(registered.id)"
+    "registered = client.register_entity(entity=contribution, token=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20859296-1d8c-43a1-ab31-8ad9284ec8eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(registered)"
    ]
   },
   {
@@ -90,7 +161,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retrieved = client.get(entity_type=Contribution, entity_id=registered.id, token=token)\n",
+    "retrieved = client.get_entity(entity_type=Contribution, entity_id=registered.id, token=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891df12c-a76a-42f4-b0e4-bbfae0ab6d72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(retrieved)"
    ]
   }
