--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -64,12 +64,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = client.search(\n",
+    "species = client.search_entity(\n",
     "    entity_type=Species, query={\"name\": \"Mus musculus\"}, token=token, limit=10\n",
-    ").one()\n",
-    "rprint(species)\n",
-    "\n",
-    "strain = client.search(entity_type=Strain, query={\"name\": \"Cux2-CreERT2\"}, token=token).one()\n",
+    ").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a697b1d-2bdc-488d-8ce6-5f7547af87fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea7fd15-bf51-4039-a1fd-c580ce813ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain = client.search_entity(entity_type=Strain, query={\"name\": \"Cux2-CreERT2\"}, token=token).one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d75d53-71f1-4213-8355-4937c1e27558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(strain)"
    ]
   },
@@ -109,7 +135,16 @@
     "    brain_region=brain_region,\n",
     "    location=brain_location,\n",
     "    legacy_id=\"temp\",\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2568abc1-8b72-4f35-85d3-19f6935ea232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(morphology)"
    ]
   },
@@ -128,9 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered = client.register(entity=morphology, token=token)\n",
-    "rprint(registered)\n",
-    "\n",
+    "registered = client.register_entity(entity=morphology, token=token)\n",
     "\n",
     "with tempfile.TemporaryDirectory() as tdir:\n",
     "    file1 = Path(tdir, \"morph.h5\")\n",
@@ -179,13 +212,39 @@
    "outputs": [],
    "source": [
     "# with assets included (default)\n",
-    "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
-    "rprint(fetched)\n",
-    "\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70271bac-cc92-49a1-9bdd-aa03bac92a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(fetched)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c979f2e6-5c6c-426e-9828-9202f8c63508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# without assets\n",
-    "fetched_wout_assets = client.get(\n",
+    "fetched_wout_assets = client.get_entity(\n",
     "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token, with_assets=False\n",
-    ")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "554ed8ef-2aa9-4880-86b3-c67f987cb448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(fetched_wout_assets)"
    ]
   },
@@ -250,7 +309,7 @@
     "\n",
     "rprint(deleted_asset)\n",
     "\n",
-    "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
     "rprint(fetched.assets)"
    ]
   },
@@ -290,7 +349,7 @@
     "\n",
     "\n",
     "# synchronize morphology with new server data\n",
-    "fetched = client.get(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
     "rprint(fetched.assets)\n",
     "\n",
     "\n",
@@ -326,14 +385,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hits = client.search(\n",
+    "hits = client.search_entity(\n",
     "    entity_type=ReconstructionMorphology,\n",
     "    query={\"name__ilike\": \"my-morph\", \"page\": 1, \"page_size\": 2},\n",
     "    token=token,\n",
     "    limit=0,\n",
     ").all()\n",
     "\n",
-    "print(len(hits))\n",
+    "print(\"Number of results: \", len(hits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4091c7a8-75b9-49d0-8c98-378b7fb5df6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(hits[0])"
    ]
   }
