--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -45,7 +45,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_species = client.search(entity_type=Species, token=token).all()\n",
+    "all_species = client.search_entity(entity_type=Species, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afe6d8c2-22d7-4971-abf6-72fcc375d7f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_species)"
    ]
   },
@@ -64,7 +73,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_strains = client.search(entity_type=Strain, token=token).all()\n",
+    "all_strains = client.search_entity(entity_type=Strain, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1acd65-7599-4c61-b77d-cced760f395a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_strains)"
    ]
   },
@@ -83,7 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_roles = client.search(entity_type=Role, token=token).all()\n",
+    "all_roles = client.search_entity(entity_type=Role, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ede09f1-77cd-419c-8161-9b3df86b5e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_roles)"
    ]
   },
@@ -102,7 +129,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_users = client.search(entity_type=Person, token=token).all()\n",
+    "all_users = client.search_entity(entity_type=Person, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df61dce3-dc45-425b-a88d-a985a199578c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_users)"
    ]
   },
@@ -121,7 +157,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_orgs = client.search(entity_type=Organization, token=token).all()\n",
+    "all_orgs = client.search_entity(entity_type=Organization, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb3e0881-961e-40b6-befe-b5f47e9ee539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_orgs)"
    ]
   },
@@ -140,7 +185,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_mtypes = client.search(entity_type=MTypeClass, token=token).all()\n",
+    "all_mtypes = client.search_entity(entity_type=MTypeClass, token=token).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "030da0a2-2e54-4fca-85fc-c147e1bb8c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(all_mtypes)"
    ]
   },
@@ -159,7 +213,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphs = client.search(entity_type=ReconstructionMorphology, token=token, limit=10).all()\n",
+    "morphs = client.search_entity(entity_type=ReconstructionMorphology, token=token, limit=10).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb748567-21f8-4f79-9abb-93d2dfc07c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(morphs)"
    ]
   },
@@ -178,9 +241,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphs = client.search(\n",
+    "morphs = client.search_entity(\n",
     "    entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token\n",
-    ").all()\n",
+    ").all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4270e4-3565-4062-956f-5d4746589a12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(morphs)"
    ]
   }
