--- a/examples/contribution.ipynb
+++ b/examples/contribution.ipynb
@@ -81,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphology = client.search_entity(entity_type=ReconstructionMorphology, token=token, limit=1).first()"
+    "morphology = client.search_entity(\n",
+    "    entity_type=ReconstructionMorphology, token=token, limit=1\n",
+    ").first()"
    ]
   },
   {
