--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -212,7 +212,9 @@
    "outputs": [],
    "source": [
     "# with assets included (default)\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)"
+    "fetched = client.get_entity(\n",
+    "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token\n",
+    ")"
    ]
   },
   {
@@ -235,7 +237,7 @@
     "# without assets\n",
     "fetched_wout_assets = client.get_entity(\n",
     "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token, with_assets=False\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -309,7 +311,9 @@
     "\n",
     "rprint(deleted_asset)\n",
     "\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
+    "fetched = client.get_entity(\n",
+    "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token\n",
+    ")\n",
     "rprint(fetched.assets)"
    ]
   },
@@ -349,7 +353,9 @@
     "\n",
     "\n",
     "# synchronize morphology with new server data\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology, token=token)\n",
+    "fetched = client.get_entity(\n",
+    "    entity_id=registered.id, entity_type=ReconstructionMorphology, token=token\n",
+    ")\n",
     "rprint(fetched.assets)\n",
     "\n",
     "\n",
