Sync singular/plural attrs with entitycore

--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -395,7 +395,7 @@
     "    entity_type=ReconstructionMorphology,\n",
     "    query={\"name__ilike\": \"my-morph\", \"page\": 1, \"page_size\": 2},\n",
     "    token=token,\n",
-    "    limit=0,\n",
+    "    limit=None,\n",
     ").all()\n",
     "\n",
     "print(\"Number of results: \", len(hits))"
