--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -55,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rprint(len(all_species))\n",
     "rprint(all_species)"
    ]
   },
@@ -83,7 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(all_strains)"
+    "rprint(len(all_strains))\n",
+    "rprint(all_strains[:2])"
    ]
   },
   {
@@ -111,7 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(all_roles)"
+    "rprint(len(all_roles))\n",
+    "rprint(all_roles[:2])"
    ]
   },
   {
@@ -139,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(all_users)"
+    "rprint(len(all_users))\n",
+    "rprint(all_users[:2])"
    ]
   },
   {
@@ -167,7 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(all_orgs)"
+    "rprint(len(all_orgs))\n",
+    "rprint(all_orgs[:2])"
    ]
   },
   {
@@ -195,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(all_mtypes)"
+    "rprint(len(all_mtypes))\n",
+    "rprint(all_mtypes[:2])"
    ]
   },
   {
@@ -223,7 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(morphs)"
+    "rprint(len(morphs))\n",
+    "rprint(morphs[:2])"
    ]
   },
   {
@@ -253,27 +260,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(morphs)"
+    "rprint(len(morphs))\n",
+    "rprint(morphs[:2])"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "name": "python"
   }
  },
  "nbformat": 4,
