Switch to using UUIDs instead of integer ids

--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "morphs = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology, query={\"mtype__id\": 34}, token=token\n",
+    "    entity_type=ReconstructionMorphology, query={\"mtype__pref_label\": \"SR_PC\"}, token=token\n",
     ").all()"
    ]
   },
@@ -266,8 +266,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
