Use discriminated union for agent

--- a/examples/searching.ipynb
+++ b/examples/searching.ipynb
@@ -13,7 +13,8 @@
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.contribution import Organization, Person, Role\n",
+    "from entitysdk.models.agent import Organization, Person\n",
+    "from entitysdk.models.contribution import Role\n",
     "from entitysdk.models.morphology import (\n",
     "    ReconstructionMorphology,\n",
     "    Species,\n",
