Set legacy_id to None

--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -134,6 +134,7 @@
     "    strain=strain,\n",
     "    brain_region=brain_region,\n",
     "    location=brain_location,\n",
+    "    legacy_id=None,\n",
     ")"
    ]
   },
