--- a/examples/morphology.ipynb
+++ b/examples/morphology.ipynb
@@ -134,7 +134,7 @@
     "    strain=strain,\n",
     "    brain_region=brain_region,\n",
     "    location=brain_location,\n",
-    "    legacy_id=\"temp\",\n",
+    "    legacy_id=None,\n",
     ")"
    ]
   },
