--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -239,7 +239,7 @@
    "id": "fae8506b-9cbc-433b-a17d-6ce3d84bcf4c",
    "metadata": {},
    "source": [
-    "## Find morphologies of a specifix mtype id"
+    "## Find morphologies by mtype"
    ]
   },
   {
@@ -267,22 +267,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "name": "python"
   }
  },
  "nbformat": 4,
