--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -153,7 +153,25 @@
    "id": "83fb7e5e-73b5-4227-aa22-90bb789b0907",
    "metadata": {},
    "source": [
-    "## Register morphology and upload assets"
+    "## Register morphology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e32a168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registered = client.register_entity(entity=morphology, token=token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d500bd",
+   "metadata": {},
+   "source": [
+    "## Upload assets"
    ]
   },
   {
@@ -163,8 +181,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered = client.register_entity(entity=morphology, token=token)\n",
-    "\n",
     "with tempfile.TemporaryDirectory() as tdir:\n",
     "    file1 = Path(tdir, \"morph.h5\")\n",
     "    file1.write_text(\"h5\")\n",
@@ -413,22 +429,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "name": "python"
   }
  },
  "nbformat": 4,
