--- a/examples/03_contribution.ipynb
+++ b/examples/03_contribution.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "morphology = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology, token=token, limit=1\n",
+    "    entity_type=ReconstructionMorphology, token=token, limit=1, query={\"name__ilike\": \"my-morph\"}\n",
     ").first()"
    ]
   },
@@ -178,22 +178,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "name": "python"
   }
  },
  "nbformat": 4,
