--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -28,7 +28,12 @@
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
     "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
-    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")"
+    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "\n",
+    "# uncomment for staging\n",
+    "# from obi_auth import get_token\n",
+    "# token = get_token(environment=\"staging\")\n",
+    "# client = Client(environment=\"staging\")\n"
    ]
   },
   {
@@ -264,11 +269,33 @@
     "rprint(len(morphs))\n",
     "rprint(morphs[:2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cd7f37b-2ac7-4f8e-8709-f3a1f1ffaf70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
