Fix format, lint

--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -33,7 +33,7 @@
     "# uncomment for staging\n",
     "# from obi_auth import get_token\n",
     "# token = get_token(environment=\"staging\")\n",
-    "# client = Client(environment=\"staging\")\n"
+    "# client = Client(environment=\"staging\")"
    ]
   },
   {
