--- a/examples/03_contribution.ipynb
+++ b/examples/03_contribution.ipynb
@@ -26,11 +26,11 @@
     "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
     "\n",
     "# uncomment for staging\n",
-    "from obi_auth import get_token\n",
-    "token = get_token(environment=\"staging\")\n",
+    "# from obi_auth import get_token\n",
+    "# token = get_token(environment=\"staging\")\n",
     "# Replace this with your vlab project url in staging\n",
-    "project_context = ProjectContext.from_vlab_url(\"https://staging.openbraininstitute.org/app/virtual-lab/lab/594fd60d-7a38-436f-939d-500feaa13bba/project/ff89ca07-6613-4922-9ab0-2637221db8b5/home\")\n",
-    "client = Client(environment=\"staging\", project_context=project_context)"
+    "# project_context = ProjectContext.from_vlab_url(\"https://staging.openbraininstitute.org/app/virtual-lab/lab/594fd60d-7a38-436f-939d-500feaa13bba/project/ff89ca07-6613-4922-9ab0-2637221db8b5/home\")\n",
+    "# client = Client(environment=\"staging\", project_context=project_context)"
    ]
   },
   {
@@ -142,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note: It will fail if registered twice because there is a uniqueness constraint on (agent, morphology_id)\n",
+    "# Note: It will fail if registered twice\n",
+    "# because there is a uniqueness constraint on (agent, morphology_id)\n",
     "registered = client.register_entity(entity=contribution, token=token)"
    ]
   },
