--- a/examples/03_contribution.ipynb
+++ b/examples/03_contribution.ipynb
@@ -23,7 +23,14 @@
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
     "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
-    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")"
+    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "\n",
+    "# uncomment for staging\n",
+    "# from obi_auth import get_token\n",
+    "# token = get_token(environment=\"staging\")\n",
+    "# Replace this with your vlab project url in staging\n",
+    "# project_context = ProjectContext.from_vlab_url(\"https://staging.openbraininstitute.org/app/virtual-lab/lab/594fd60d-7a38-436f-939d-500feaa13bba/project/ff89ca07-6613-4922-9ab0-2637221db8b5/home\")\n",
+    "# client = Client(environment=\"staging\", project_context=project_context)"
    ]
   },
   {
@@ -135,6 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note: It will fail if registered twice\n",
+    "# because there is a uniqueness constraint on (agent, morphology_id)\n",
     "registered = client.register_entity(entity=contribution, token=token)"
    ]
   },
@@ -178,8 +187,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
