--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -14,6 +14,7 @@
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
     "from entitysdk.models.agent import Organization, Person\n",
+    "from entitysdk.models.brain_region import BrainRegion\n",
     "from entitysdk.models.contribution import Role\n",
     "from entitysdk.models.morphology import (\n",
     "    ReconstructionMorphology,\n",
@@ -32,6 +33,7 @@
     "\n",
     "# uncomment for staging\n",
     "# from obi_auth import get_token\n",
+    "\n",
     "# token = get_token(environment=\"staging\")\n",
     "# client = Client(environment=\"staging\")"
    ]
@@ -287,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
