--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -103,7 +103,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rprint(brain_region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5dde536-0c58-4d42-a834-1b1a0ec17e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rprint(strain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d42a174-9737-4477-830a-3dc908dea925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brain_region = client.search_entity(entity_type=BrainRegion, query={\"annotation_value\": 68}, token=token).one()"
    ]
   },
   {
@@ -121,18 +141,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# No GET endpoint yet for brain-region\n",
-    "\n",
     "brain_location = BrainLocation(\n",
     "    x=4101.52490234375,\n",
     "    y=1173.8499755859375,\n",
     "    z=4744.60009765625,\n",
-    ")\n",
-    "brain_region = BrainRegion(\n",
-    "    id=68,\n",
-    "    name=\"Frontal pole, layer 1\",\n",
-    "    acronym=\"FRP1\",\n",
-    "    children=[],\n",
     ")\n",
     "morphology = ReconstructionMorphology(\n",
     "    name=\"my-morph\",\n",
@@ -451,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
