--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -99,16 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d75d53-71f1-4213-8355-4937c1e27558",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rprint(brain_region)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e5dde536-0c58-4d42-a834-1b1a0ec17e9d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +113,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brain_region = client.search_entity(entity_type=BrainRegion, query={\"annotation_value\": 68}, token=token).one()"
+    "brain_region = client.search_entity(\n",
+    "    entity_type=BrainRegion, query={\"annotation_value\": 68}, token=token\n",
+    ").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "282200cd-ad0c-4bb3-bc21-88de85289179",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(brain_region)"
    ]
   },
   {
