Import all models from entitysdk.models in examples

--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -15,12 +15,12 @@
     "from entitysdk.common import ProjectContext\n",
     "from entitysdk.models.agent import Organization, Person\n",
     "from entitysdk.models.contribution import Role\n",
-    "from entitysdk.models.morphology import (\n",
+    "from entitysdk.models import (\n",
+    "    MTypeClass,\n",
     "    ReconstructionMorphology,\n",
     "    Species,\n",
     "    Strain,\n",
     ")\n",
-    "from entitysdk.models.mtype import MTypeClass\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
