--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.morphology import (\n",
+    "from entitysdk.models import (\n",
     "    BrainLocation,\n",
     "    BrainRegion,\n",
     "    ReconstructionMorphology,\n",
