--- a/examples/03_contribution.ipynb
+++ b/examples/03_contribution.ipynb
@@ -13,9 +13,7 @@
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.agent import Organization\n",
-    "from entitysdk.models.contribution import Contribution, Role\n",
-    "from entitysdk.models.morphology import ReconstructionMorphology\n",
+    "from entitysdk.models import Contribution, Organization, ReconstructionMorphology, Role\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
