--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -13,11 +13,12 @@
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.agent import Organization, Person\n",
-    "from entitysdk.models.contribution import Role\n",
     "from entitysdk.models import (\n",
     "    MTypeClass,\n",
+    "    Organization,\n",
+    "    Person,\n",
     "    ReconstructionMorphology,\n",
+    "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
     ")\n",
