--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -13,14 +13,15 @@
     "\n",
     "from entitysdk.client import Client\n",
     "from entitysdk.common import ProjectContext\n",
-    "from entitysdk.models.agent import Organization, Person\n",
-    "from entitysdk.models.contribution import Role\n",
-    "from entitysdk.models.morphology import (\n",
+    "from entitysdk.models import (\n",
+    "    MTypeClass,\n",
+    "    Organization,\n",
+    "    Person,\n",
     "    ReconstructionMorphology,\n",
+    "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
     ")\n",
-    "from entitysdk.models.mtype import MTypeClass\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
