--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -302,19 +302,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asset = client.download_asset_files(fetched, select={\"content_type\": \"application/swc\"}).all()\n",
     "\n",
-    "asset = client.select_assets(fetched, match={\"content_type\": \"application/swc\"}).one()\n",
+    "downloaded_asset = client.download_assets(fetched.assets, selection={\"content_type\": \"application/swc\"}, output_path=\"./my-file.h5\", token=token).one()\n",
     "\n",
-    "client.download_file(\n",
-    "    entity_id=fetched.id,\n",
-    "    entity_type=type(fetched),\n",
-    "    asset_id=asset.id,\n",
-    "    output_path=\"./my-file.h5\",\n",
-    "    token=token,\n",
-    ")\n",
     "content = client.download_content(\n",
-    "    entity_id=fetched.id, entity_type=type(fetched), asset_id=asset.id, token=token\n",
+    "    entity_id=fetched.id, entity_type=type(fetched), asset_id=downloaded_asset.id, token=token\n",
     ")\n",
     "\n",
     "print(content)\n",
