--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -302,8 +302,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "downloaded_asset = client.download_assets(fetched.assets, selection={\"content_type\": \"application/swc\"}, output_path=\"./my-file.h5\", token=token).one()\n",
+    "downloaded_asset = client.download_assets(\n",
+    "    fetched.assets,\n",
+    "    selection={\"content_type\": \"application/swc\"},\n",
+    "    output_path=\"./my-file.h5\",\n",
+    "    token=token,\n",
+    ").one()\n",
     "\n",
     "content = client.download_content(\n",
     "    entity_id=fetched.id, entity_type=type(fetched), asset_id=downloaded_asset.id, token=token\n",
