--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -302,19 +302,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for asset in fetched.assets:\n",
-    "    if asset.content_type == \"application/swc\":\n",
-    "        client.download_file(\n",
-    "            entity_id=fetched.id,\n",
-    "            entity_type=type(fetched),\n",
-    "            asset_id=asset.id,\n",
-    "            output_path=\"./my-file.h5\",\n",
-    "            token=token,\n",
-    "        )\n",
-    "        content = client.download_content(\n",
-    "            entity_id=fetched.id, entity_type=type(fetched), asset_id=asset.id, token=token\n",
-    "        )\n",
-    "        break\n",
+    "downloaded_asset = client.download_assets(\n",
+    "    fetched.assets,\n",
+    "    selection={\"content_type\": \"application/swc\"},\n",
+    "    output_path=\"./my-file.h5\",\n",
+    "    token=token,\n",
+    ").one()\n",
+    "\n",
+    "content = client.download_content(\n",
+    "    entity_id=fetched.id, entity_type=type(fetched), asset_id=downloaded_asset.id, token=token\n",
+    ")\n",
     "\n",
     "print(content)\n",
     "print(Path(\"my-file.h5\").read_text())"
