Simplify token usage

--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -28,8 +28,9 @@
     "    virtual_lab_id=\"a98b7abc-fc46-4700-9e3d-37137812c730\",\n",
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
-    "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
     "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "client = Client(api_url=entitycore_api_url, project_context=project_context, token_manager=token)\n",
+    "\n",
     "\n",
     "# uncomment for staging\n",
     "# from obi_auth import get_token\n",
@@ -53,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_species = client.search_entity(entity_type=Species, token=token).all()"
+    "all_species = client.search_entity(entity_type=Species).all()"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_strains = client.search_entity(entity_type=Strain, token=token).all()"
+    "all_strains = client.search_entity(entity_type=Strain).all()"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_roles = client.search_entity(entity_type=Role, token=token).all()"
+    "all_roles = client.search_entity(entity_type=Role).all()"
    ]
   },
   {
@@ -140,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_users = client.search_entity(entity_type=Person, token=token).all()"
+    "all_users = client.search_entity(entity_type=Person).all()"
    ]
   },
   {
@@ -169,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_orgs = client.search_entity(entity_type=Organization, token=token).all()"
+    "all_orgs = client.search_entity(entity_type=Organization).all()"
    ]
   },
   {
@@ -198,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_mtypes = client.search_entity(entity_type=MTypeClass, token=token).all()"
+    "all_mtypes = client.search_entity(entity_type=MTypeClass).all()"
    ]
   },
   {
@@ -227,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphs = client.search_entity(entity_type=ReconstructionMorphology, token=token, limit=10).all()"
+    "morphs = client.search_entity(entity_type=ReconstructionMorphology, limit=10).all()"
    ]
   },
   {
@@ -257,7 +258,7 @@
    "outputs": [],
    "source": [
     "morphs = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology, query={\"mtype__pref_label\": \"SR_PC\"}, token=token\n",
+    "    entity_type=ReconstructionMorphology, query={\"mtype__pref_label\": \"SR_PC\"}\n",
     ").all()"
    ]
   },
@@ -271,6 +272,14 @@
     "rprint(len(morphs))\n",
     "rprint(morphs[:2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c41d5ae-81a6-4b01-965c-3f46a082cd31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
