--- a/examples/03_contribution.ipynb
+++ b/examples/03_contribution.ipynb
@@ -20,8 +20,9 @@
     "    virtual_lab_id=\"a98b7abc-fc46-4700-9e3d-37137812c730\",\n",
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
-    "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
     "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "client = Client(api_url=entitycore_api_url, project_context=project_context, token_manager=token)\n",
+    "\n",
     "\n",
     "# uncomment for staging\n",
     "# from obi_auth import get_token\n",
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = client.search_entity(entity_type=Organization, token=token, limit=1).one()"
+    "agent = client.search_entity(entity_type=Organization, limit=1).one()"
    ]
   },
   {
@@ -66,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "role = client.search_entity(entity_type=Role, token=token, limit=1).one()"
+    "role = client.search_entity(entity_type=Role, limit=1).one()"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "outputs": [],
    "source": [
     "morphology = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology, token=token, limit=1, query={\"name__ilike\": \"my-morph\"}\n",
+    "    entity_type=ReconstructionMorphology, limit=1, query={\"name__ilike\": \"my-morph\"}\n",
     ").first()"
    ]
   },
@@ -142,7 +143,7 @@
    "source": [
     "# Note: It will fail if registered twice\n",
     "# because there is a uniqueness constraint on (agent, morphology_id)\n",
-    "registered = client.register_entity(entity=contribution, token=token)"
+    "registered = client.register_entity(entity=contribution)"
    ]
   },
   {
@@ -170,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retrieved = client.get_entity(entity_type=Contribution, entity_id=registered.id, token=token)"
+    "retrieved = client.get_entity(entity_type=Contribution, entity_id=registered.id)"
    ]
   },
   {
