--- a/examples/05_simulation_campaign.ipynb
+++ b/examples/05_simulation_campaign.ipynb
@@ -37,7 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = models.SimulationCampaign(name=\"my-campaign\", description=\"my-campaign-description\", scan_parameters={\"foo\", \"bar\"})\n",
+    "campaign = models.SimulationCampaign(\n",
+    "    name=\"my-campaign\", description=\"my-campaign-description\", scan_parameters={\"foo\", \"bar\"}\n",
+    ")\n",
     "campaign = client.register_entity(campaign, token=token)"
    ]
   },
