--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -72,9 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = client.search_entity(\n",
-    "    entity_type=Species, query={\"name\": \"Mus musculus\"}, limit=10\n",
-    ").one()"
+    "species = client.search_entity(entity_type=Species, query={\"name\": \"Mus musculus\"}, limit=10).one()"
    ]
   },
   {
@@ -165,9 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brain_region = client.search_entity(\n",
-    "    entity_type=BrainRegion, query={\"annotation_value\": 68}\n",
-    ").one()"
+    "brain_region = client.search_entity(entity_type=BrainRegion, query={\"annotation_value\": 68}).one()"
    ]
   },
   {
@@ -393,9 +389,7 @@
    ],
    "source": [
     "# with assets included (default)\n",
-    "fetched = client.get_entity(\n",
-    "    entity_id=registered.id, entity_type=ReconstructionMorphology\n",
-    ")"
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)"
    ]
   },
   {
