--- a/examples/04_circuit.ipynb
+++ b/examples/04_circuit.ipynb
@@ -63,9 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brain_region = client.search_entity(\n",
-    "    entity_type=models.BrainRegion, query={\"acronym\": \"CB\"}\n",
-    ").first()\n",
+    "brain_region = client.search_entity(entity_type=models.BrainRegion, query={\"acronym\": \"CB\"}).first()\n",
     "\n",
     "\n",
     "circuit = models.Circuit(\n",
@@ -124,9 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetched = client.get_entity(\n",
-    "    entity_id=registered_circuit.id, entity_type=models.Circuit\n",
-    ")"
+    "fetched = client.get_entity(entity_id=registered_circuit.id, entity_type=models.Circuit)"
    ]
   },
   {
