--- a/examples/04_circuit.ipynb
+++ b/examples/04_circuit.ipynb
@@ -18,8 +18,8 @@
     "    virtual_lab_id=\"a98b7abc-fc46-4700-9e3d-37137812c730\",\n",
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
-    "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
-    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")"
+    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "client = Client(api_url=entitycore_api_url, project_context=project_context, token_manager=token)"
    ]
   },
   {
@@ -38,14 +38,14 @@
    "outputs": [],
    "source": [
     "species = client.search_entity(\n",
-    "    entity_type=models.Species, token=token, query={\"name__ilike\": \"Mus musculus\"}\n",
+    "    entity_type=models.Species, query={\"name__ilike\": \"Mus musculus\"}\n",
     ").first()\n",
     "\n",
     "subject = models.Subject(\n",
     "    name=\"my-subject\", description=\"my-subject-description\", sex=\"male\", species=species\n",
     ")\n",
     "\n",
-    "subject = client.register_entity(subject, token=token)"
+    "subject = client.register_entity(subject)"
    ]
   },
   {
@@ -63,9 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brain_region = client.search_entity(\n",
-    "    entity_type=models.BrainRegion, token=token, query={\"acronym\": \"CB\"}\n",
-    ").first()\n",
+    "brain_region = client.search_entity(entity_type=models.BrainRegion, query={\"acronym\": \"CB\"}).first()\n",
     "\n",
     "\n",
     "circuit = models.Circuit(\n",
@@ -96,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered_circuit = client.register_entity(circuit, token=token)"
+    "registered_circuit = client.register_entity(circuit)"
    ]
   },
   {
@@ -124,9 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetched = client.get_entity(\n",
-    "    entity_id=registered_circuit.id, entity_type=models.Circuit, token=token\n",
-    ")"
+    "fetched = client.get_entity(entity_id=registered_circuit.id, entity_type=models.Circuit)"
    ]
   },
   {
@@ -138,6 +134,14 @@
    "source": [
     "rprint(fetched)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f359b797-02ad-4358-bef7-ad3f3008d323",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
