--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -323,6 +323,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c979f2e6-5c6c-426e-9828-9202f8c63508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without assets\n",
+    "fetched_wout_assets = client.get_entity(\n",
+    "    entity_id=registered.id, entity_type=ReconstructionMorphology, with_assets=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "554ed8ef-2aa9-4880-86b3-c67f987cb448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(fetched_wout_assets)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b00725dc-ba90-4ddf-b3ba-dea612cd7720",
    "metadata": {},
