--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -67,6 +67,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08520e6d-1b5d-4d89-afeb-1f77feeeff6d",
+   "metadata": {},
+   "source": [
+    "# 1. Register the entire provenance at once\n",
+    "When all entities are available up front the entire provenance can be generated using the creation endpoints without any updating taking place."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb0984e9-b382-435c-b114-69b76403dcda",
+   "metadata": {},
+   "source": [
+    "## Register all entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e7eb667-d6cf-46db-9f7c-b69ab1838cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "campaign = client.register_entity(models.SimulationCampaign(\n",
+    "    name=\"my-campaign\",\n",
+    "    description=\"my-campaign-description\",\n",
+    "    entity_id=circuit.id,\n",
+    "    scan_parameters={\"foo\": \"bar\"},\n",
+    "))\n",
+    "\n",
+    "simulations = [\n",
+    "    client.register_entity(\n",
+    "        models.Simulation(\n",
+    "            name=f\"sim-{i}\",\n",
+    "            description=f\"sim-{i}\",\n",
+    "            scan_parameters={\"foo\": \"bar\"},\n",
+    "            entity_id=circuit.id,\n",
+    "            simulation_campaign_id=campaign.id,\n",
+    "        )\n",
+    "    )\n",
+    "    for i in range(5)\n",
+    "]\n",
+    "simulation_results = [\n",
+    "    client.register_entity(models.SimulationResult(name=f\"result-{i}\", description=f\"result-{i}\"))\n",
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c8b7d39-2858-4d39-8a87-01f8fd71c2af",
+   "metadata": {},
+   "source": [
+    "## Register activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a13c71f-84ae-4bcf-bfbd-637b124963db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation_generation = client.register_entity(models.SimulationGeneration(\n",
+    "    start_time=datetime.now(UTC),\n",
+    "    used=[campaign],\n",
+    "    generated=simulations,\n",
+    "))\n",
+    "\n",
+    "simulation_executions = [\n",
+    "    client.register_entity(\n",
+    "        models.SimulationExecution(\n",
+    "            used=[simulations[i]],\n",
+    "            generated=[simulation_results[i]],\n",
+    "            start_time=datetime.now(UTC),\n",
+    "            status=\"done\",\n",
+    "        )\n",
+    "    )\n",
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085c2ae7-ca05-49d9-92a7-a14db5b52616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(simulation_generation)\n",
+    "rprint(simulation_executions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d071a7-47d5-4f46-ba42-269082cfc71e",
+   "metadata": {},
+   "source": [
+    "# 2. Register provenance gradually"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb0132f6-88e4-4700-a2b7-799bb0ee77e6",
    "metadata": {},
    "source": [
@@ -80,22 +182,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = models.SimulationCampaign(\n",
+    "campaign = client.register_entity(models.SimulationCampaign(\n",
     "    name=\"my-campaign\",\n",
     "    description=\"my-campaign-description\",\n",
     "    entity_id=circuit.id,\n",
     "    scan_parameters={\"foo\": \"bar\"},\n",
-    ")\n",
-    "campaign = client.register_entity(campaign)"
+    "))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ceda1df-a80c-47fe-83fa-9917f8809848",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -112,21 +205,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_generation = models.SimulationGeneration(\n",
+    "sim_generation = client.register_entity(models.SimulationGeneration(\n",
     "    start_time=datetime.now(UTC),\n",
     "    used=[campaign],\n",
-    ")\n",
-    "sim_generation = client.register_entity(sim_generation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7de56b6-d831-41e5-8215-f91d13dff829",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rprint(sim_generation)"
+    "))"
    ]
   },
   {
@@ -163,7 +245,7 @@
    "id": "847511de-60a7-4c37-aeae-9eba5ee50f8a",
    "metadata": {},
    "source": [
-    "## Update SimulationGeneration with generated activities"
+    "## Update SimulationGeneration with simulations"
    ]
   },
   {
